2004-01-27 Bernhard Held <bernhard AT bernhardheld.de>

	* support/regression/tests/libmullong.c: fixed logic, on little endian
	hosts we ended without a mullong_wrapper()

2004-01-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* ChangeLog: changed "@" to " AT " in hopes of reducing spam and
	virus/worm forged address usage.

2004-01-27 Bernhard Held <bernhard AT bernhardheld.de>

	Fixed promotion, it should be done on AST level:
	* src/SDCCast.c (addCast): added promotion to int
	(decorateType): updated call to upCast()
	* src/SDCCicode.c (geniCodeLeftShift): removed call to
	usualUnaryConversions()

2004-01-26  Michael Hope  <michaelh AT juju.net.nz>

	* support/regression/tests/literalop.c (mulWrapper): Added a
	wrapper to remove integer overflow warnings.

	* support/regression/tests/float_trans.c: Made work on host.

	* support/regression/ports/ucz80/spec.mk (UCZ80): Made detect the
	location of sz80.

	* support/regression/generate-cases.py (main): Changed from inline
	to a main method.

	* doc/Makefile (install): Changed to depth first to get rid of
	missing directory install warning.

	* as/Makefile (install-doc): Made work on Mac.

2004-01-25 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c: added an additional type flow in decorateType() of
	opposite direction, see feature request #860006; it's enabled at runtime
	by setting the environment variable SDCC_NEWTYPEFLOW
	* src/SDCCast.h: changed prototype of decorateType()
	* src/SDCCglue.c (emitRegularMap): updated call of decorateType()
	* src/SDCCicode.c (geniCodeDivision) (geniCodeModulus): promotion from
	'char' to 'int' can be omitted, if both operands are 'unsigned char';
	see feature request #877103
	* src/SDCCval.c: updated call of decorateType()
	(valBitwise): fixed bug #882876
	(valMinus): added promotion
	(valLogicAndOr): result is unsigned
	(cheapestVal) (constVal): literals from 0...255 are 'unsigned char' now
	* src/SDCCsymt.c (computeType),